# heat-diffusion-modelling

./: README.md  heat_diffusion.py  pyproject.toml
