[project]
name = "heat-diffusion"
version = "0.1.0"
description = "Model of heat diffusion"
authors = [
    {name = "dly"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (==2.3.2)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.5"
scipy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
